# DongTing

./: CODE_OF_CONDUCT.md  CONTENT_LICENSE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json
data/languages/lang_001/: categories.json  entries.json  language.json
scripts/: build-corpus.ts  check-audio.ts  check-images.ts  validate-corpus.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/corpus/: corpus.sqlite
src-tauri/src/: lib.rs
src-tauri/src/commands/: archive.rs
src-tauri/src/database/: connection.rs  models.rs  queries.rs
src-tauri/src/resources/: path.rs
src/app/: AppShell.tsx  router.tsx
src/modules/about/: AboutPage.tsx
src/modules/archive/: archiveApi.ts  types.ts
src/modules/audio/: SpeakerButton.tsx  audioPlayer.ts
src/modules/categories/: CategorySidebar.tsx
src/modules/entries/: EntryCard.tsx  EntryDetail.tsx  EntryList.tsx
src/modules/search/: SearchBox.tsx
